--- a/index.html
+++ b/index.html
@@ -92,7 +92,72 @@
                 </div>
             </div>
         </div>
-        <!-- Repeat for other drawers -->
+           <div class="chest__drawer drawer" data-position="2">
+            <details>
+                <summary></summary>
+            </details>
+            <div class="drawer__structure">
+                <div class="drawer__panel drawer__panel--back">
+                    <!-- Add the money image here -->
+                    <img src="img/money.png" alt="Money" style="width: 80%; height: auto;">
+                </div>
+                <div class="drawer__panel drawer__panel--bottom"></div>
+                <div class="drawer__panel drawer__panel--right"></div>
+                <div class="drawer__panel drawer__panel--left"></div>
+                <div class="drawer__panel drawer__panel--front"></div>
+            </div>
+        </div>
+        <div class="chest__drawer drawer" data-position="3">
+            <details>
+                <summary></summary>
+            </details>
+            <div class="drawer__structure">
+                <div class="drawer__panel drawer__panel--back">
+                    <!-- Add the money image here -->
+                    <div class="d-flex">
+                        <img src="img/money.png" alt="Money" style="width: 80%; height: auto;">
+                    </div>
+
+                </div>
+                <div class="drawer__panel drawer__panel--bottom"></div>
+                <div class="drawer__panel drawer__panel--right"></div>
+                <div class="drawer__panel drawer__panel--left"></div>
+                <div class="drawer__panel drawer__panel--front"></div>
+            </div>
+        </div>
+            <div class="chest__drawer drawer" data-position="2">
+            <details>
+                <summary></summary>
+            </details>
+            <div class="drawer__structure">
+                <div class="drawer__panel drawer__panel--back">
+                    <!-- Add the money image here -->
+                    <img src="img/money.png" alt="Money" style="width: 80%; height: auto;">
+                </div>
+                <div class="drawer__panel drawer__panel--bottom"></div>
+                <div class="drawer__panel drawer__panel--right"></div>
+                <div class="drawer__panel drawer__panel--left"></div>
+                <div class="drawer__panel drawer__panel--front"></div>
+            </div>
+        </div>
+        <div class="chest__drawer drawer" data-position="3">
+            <details>
+                <summary></summary>
+            </details>
+            <div class="drawer__structure">
+                <div class="drawer__panel drawer__panel--back">
+                    <!-- Add the money image here -->
+                    <div class="d-flex">
+                        <img src="img/money.png" alt="Money" style="width: 80%; height: auto;">
+                    </div>
+
+                </div>
+                <div class="drawer__panel drawer__panel--bottom"></div>
+                <div class="drawer__panel drawer__panel--right"></div>
+                <div class="drawer__panel drawer__panel--left"></div>
+                <div class="drawer__panel drawer__panel--front"></div>
+            </div>
+        </div>
     </div>
 
     <script>
